# proto-sign

./: Cargo.toml  README.md  README.zh.md  release.sh
compat-configs/: README.zh.md  extract_buf_configs.sh
compat-configs/examples/: README.md  lenient-mode.yaml  specific-rules.yaml  strict-mode.yaml  wire-only.yaml
compat-configs/extracted/: EXTRACTION_SUMMARY.md
compat-configs/extracted/main/: proto-sign-main.yaml
compat-configs/extracted/testdata/current/breaking_enum_same_json_format/: buf-protosign.yaml
compat-configs/extracted/testdata/current/breaking_enum_same_type/: buf-protosign.yaml
docs/: buf-sync-guide.zh.md
src/: canonical.rs  compatibility.rs  lib.rs  main.rs  normalize.rs  spec.rs  test_bulk_count.rs
src/compat/: bulk_enum_rules.rs  bulk_extension_rules.rs  bulk_field_rules.rs  bulk_file_rules.rs  bulk_message_rules.rs  bulk_other_rules.rs  bulk_package_rules.rs  bulk_reserved_rules.rs  bulk_rule_registry.rs  bulk_service_rules.rs  bulk_special_rules.rs  categories.rs  engine.rs  handlers.rs  mod.rs  test_migration.md  types.rs
tests/: breaking_integration.rs  breaking_integration_tests.rs  breaking_test.rs  buf_analysis_test.rs  buf_comprehensive_test.rs  buf_integration_test.rs  buf_real_case_test.rs  complete_rule_verification_test.rs  config_test.rs  fake_rules_validation_test.rs  fingerprint_test.rs
tests/data/: a.proto  a_formatted.proto  a_reordered.proto  b.proto  c.proto  complex_self_contained.proto  complex_self_contained_breaking.proto  complex_self_contained_cosmetic.proto  complex_self_contained_semantic.proto
(+51 files in other folders)
