[package]
name = "proto-sign"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "proto-sign"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.99"
protobuf = "3.7.2"
protobuf-parse = "3.7.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tempfile = "3.22.0"
clap = { version = "4.5.0", features = ["derive"] }
